Fix footer tag syntax in contact.html

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <button id="back-to-top">↑</button>
     <script src="script.js"></script>
   </body>
-  footer class="footer-panel">
+  <footer class="footer-panel">
     <div class="footer-content">
       <div class="footer-column">
         <h4>Explore</h4>
