Revise about section and add founder signature
Updated the text to reflect a personal touch and added a signature section.

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Senscode | About</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -53,8 +54,8 @@
               opacity: 0.8;
             "
           >
-            At the heart of every product we build is a simple belief:
-            professional-grade quality shouldn't be out of reach for the
+            At the heart of every product I build is a simple belief:
+            professional grade quality shouldn't be out of reach for the
             everyday user. As a dedicated one-man operation, I cut out the
             corporate noise to focus entirely on the craftsmanship of your
             experience. By handling every line of code and every design detail
@@ -63,6 +64,10 @@
             keeping our solutions exceptionally affordable. This isn’t just
             business; it’s a commitment to providing tools that work as hard as
             you do, without the premium price tag.
+            <div class="signature-container reveal">
+    <span class="signature-text">Christian Sparks</span>
+    <span class="founder-title">Founder & Lead Engineer</span>
+</div>
           </p>
         </div>
       </section>
