Update logo section with link to index.html

--- a/about.html
+++ b/about.html
@@ -12,7 +12,11 @@
       <span class="pulse">●</span> <span id="count-display">0 Live</span>
     </div>
     <nav class="navbar glass-panel">
-      <div class="logo">SensorMedia</div>
+      <div class="logo">
+    <div class="logo">
+    <a href="index.html" class="logo-link">SensorMedia</a>
+</div>
+</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
