Update logo to be a link in products.html

--- a/products.html
+++ b/products.html
@@ -11,7 +11,9 @@
       <span class="pulse">●</span> <span id="count-display">0 Live</span>
     </div>
     <nav class="navbar glass-panel">
-      <div class="logo">SensorMedia</div>
+    <div class="logo">
+    <a href="index.html" class="logo-link">SensorMedia</a>
+</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html" class="active">Products</a></li>
