Refactor navigation and improve text formatting
Updated navigation links and modified theme toggle button text. Adjusted paragraph formatting for better readability.

--- a/products.html
+++ b/products.html
@@ -7,30 +7,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="visit-counter" class="glass-panel">
-      <span class="pulse">●</span> <span id="count-display">0 Live</span>
-    </div>
-    <nav class="navbar glass-panel">
-    <div class="logo">
-    <a href="index.html" class="logo-link">SensorMedia</a>
-</div>
+    <div id="page-transition"></div>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="index.html" class="logo-link">SensorMedia</a>
+      </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html" class="active">Products</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
-        <button id="theme-toggle">
-          <span class="sun-icon">Dark</span><span class="moon-icon">Light</span>
-        </button>
+        <button id="theme-toggle">Loading...</button>
         <div class="hamburger" id="hamburger"><span></span><span></span></div>
       </div>
     </nav>
-    <div class="mobile-menu" id="mobile-menu">
-      <a href="index.html">Home</a><a href="products.html">Products</a
-      ><a href="about.html">About Us</a><a href="contact.html">Contact</a>
-    </div>
     <header class="hero">
       <video autoplay muted loop playsinline class="hero-video">
         <source src="vid2.mp4" type="video/mp4" />
@@ -52,12 +44,18 @@
           <div class="card reveal">
             <span class="tag">New</span>
             <h3>Consulting</h3>
-            <p>Have parameters but need your website brought to live? We can help.</p>
+            <p>
+              Have parameters but need your website brought to live? We can
+              help.
+            </p>
           </div>
           <div class="card reveal">
             <span class="tag">New</span>
             <h3>Repair</h3>
-            <p>Is your current website design not working or need optimization? We can help.</p>
+            <p>
+              Is your current website design not working or need optimization?
+              We can help.
+            </p>
           </div>
         </div>
       </section>
