--- a/about.html
+++ b/about.html
@@ -22,9 +22,8 @@
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <div class="nav-actions">
-        <button id="theme-toggle">Loading...</button>
-        <div class="hamburger" id="hamburger"><span></span><span></span></div>
+     <div class="nav-actions">
+        <button id="theme-toggle">Mode</button>
       </div>
     </nav>
     </header>
