Change theme toggle button text from 'Loading...' to 'Mode'

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
-        <button id="theme-toggle">Loading...</button>
-        <div class="hamburger" id="hamburger"><span></span><span></span></div>
+        <button id="theme-toggle">Mode</button>
       </div>
     </nav>
     <header class="hero">
