Change header from 'Our Products' to 'Our Services'

--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
       </video>
       <div class="hero-overlay"></div>
       <div class="hero-content reveal">
-        <h1>Our Products.</h1>
+        <h1>Our Services.</h1>
         <p>Choose excellence.</p>
       </div>
     </header>
